src/test/deca/context/invalid/provided/type_variable_void.deca
//Resultats :
//Erreur contextuelle
//Ligne 5 : Void can't be used as a Type

{
void x = 2;
}
